tests/models/struct/unnamed/i32/pass/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    i32
);
fn main() {}
